# pelengTest

./: .gitignore  PelengTest.sln  Program.cs  README.md
Calculator/: Calculator.csproj  Dockerfile  Program.cs
Calculator/Commands/: SystemCommands.cs
Calculator/Core/Commands/: SystemCommands.cs
Calculator/Core/Exceptions/: CalculatorException.cs
Calculator/Core/Interfaces/: IOperation.cs  ISystemCommand.cs  IUnaryOperation.cs
Calculator/Core/Operations/: BasicOperations.cs  MathOperations.cs
Calculator/Core/Services/: Calculator.cs  InputParser.cs  OperationProvider.cs
Calculator/Exceptions/: CalculatorException.cs
Calculator/Interfaces/: IOperation.cs  ISystemCommand.cs  IUnaryOperation.cs
Calculator/Operations/: BasicOperations.cs  MathOperations.cs
Calculator/Services/: Calculator.cs  InputParser.cs  OperationProvider.cs
Calculator/UI/: AdvancedOperationsWindow.axaml  AdvancedOperationsWindow.axaml.cs  App.axaml  App.axaml.cs  HelpWindow.axaml  HelpWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Eventer/: CMakeLists.txt  Dockerfile  Logger.cpp  Program.cs  README.md  TimeUtils.h  TimeUtils_unix.cpp  TimeUtils_win.cpp  event.h  logger.h  main.cpp
Eventer/Models/: Event.cs
Eventer/Services/: EventManager.cs
Exceptions/: CalculatorException.cs
Interfaces/: IOperation.cs
Operations/: BasicOperations.cs  MathOperations.cs
Services/: Calculator.cs  InputParser.cs  OperationProvider.cs
